--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="category_page">文章</string>
     <string name="tools_page">工具</string>
     <string name="about_page">关于</string>
+
+    <string name="recommend">推荐</string>
+    <string name="thinking">想法</string>
 </resources>
