feat：添加首页搜索栏

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
 
     <string name="recommend">推荐</string>
     <string name="thinking">想法</string>
+
+    <string name="enter_key_word">请输入搜索内容</string>
 </resources>
