--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="enter_key_word">请输入搜索内容</string>
 
     <string name="update_time">编辑于 %s</string>
+
+    <string name="category_total_article">%d 篇内容</string>
 </resources>
