--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="default_category_android">Android</string>
 
     <string name="all_tools">全部工具</string>
+
+    <string name="app_version">Version %s</string>
+
+    <string name="about_me">关于我</string>
+    <string name="contact_me">联系我</string>
 </resources>
