--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,11 @@
 
     <string name="about_me">关于我</string>
     <string name="contact_me">联系我</string>
+    <string name="please_enter_feedback_title">请输入标题（选填）</string>
+    <string name="please_enter_feedback_content">请输入反馈意见</string>
+    <string name="please_enter_feedback_email">请输入您的邮箱（选填）</string>
+
+    <string name="title">标题</string>
+    <string name="feedback_content">反馈意见</string>
+    <string name="email">Email</string>
 </resources>
