--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,14 @@
     <string name="about_me">关于我</string>
     <string name="contact_me">联系我</string>
     <string name="please_enter_feedback_title">请输入标题（选填）</string>
-    <string name="please_enter_feedback_content">请输入反馈意见</string>
+    <string name="please_enter_feedback_content">请输入反馈意见（必填）</string>
     <string name="please_enter_feedback_email">请输入您的邮箱（选填）</string>
 
-    <string name="title">标题</string>
-    <string name="feedback_content">反馈意见</string>
-    <string name="email">Email</string>
+    <string name="feedback_title">标题（选填）</string>
+    <string name="feedback_content">反馈意见（必填）</string>
+    <string name="feedback_email">Email（选填）</string>
 
     <string name="submit">提交</string>
+    <string name="feedback_submit_successfully">提交成功，感谢您的反馈</string>
+    <string name="feedback_submit_fail">提交失败，请稍后重试</string>
 </resources>
