--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
 
     <string name="search">搜索</string>
     <string name="please_enter_search_keywords">请输入搜索内容</string>
+    <string name="search_history">历史搜索</string>
 </resources>
