--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="search">搜索</string>
     <string name="please_enter_search_keywords">请输入搜索内容</string>
     <string name="search_history">历史搜索</string>
+    <string name="empty_search_result">暂无搜索结果</string>
 </resources>
