--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="empty_search_result">暂无搜索结果</string>
 
     <string name="write_comment">写评论</string>
+    <string name="comment_number">评论 %d</string>
 </resources>
