--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
 
     <string name="write_comment">写评论</string>
     <string name="comment_number">评论 %d</string>
+    <string name="welcome_to_congratulate">欢迎参与讨论</string>
+    <string name="commit">发布</string>
 </resources>
