--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="enter_your_email_to_generate_avatar">您的邮箱（仅用于生成头像）</string>
     <string name="enter_your_nickname">您的昵称</string>
     <string name="commit">发布</string>
+    <string name="commit_comment_successfully">发表评论成功</string>
+    <string name="commit_comment_fail">发表评论失败，请稍后重试</string>
 </resources>
