--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="commit">发布</string>
     <string name="commit_comment_successfully">发表评论成功</string>
     <string name="commit_comment_fail">发表评论失败，请稍后重试</string>
+    <string name="reply_to_who">回复 %s：</string>
 </resources>
