--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="commit_comment_successfully">发表评论成功</string>
     <string name="commit_comment_fail">发表评论失败，请稍后重试</string>
     <string name="reply_to_who">回复 %s：</string>
+
+    <string name="network_error">网络不可用，请稍后再试</string>
 </resources>
