--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,5 @@
     <string name="commit_comment_fail">发表评论失败，请稍后重试</string>
     <string name="reply_to_who">回复 %s：</string>
 
-    <string name="network_error">网络不可用，请稍后再试</string>
+    <string name="network_error">网络不可用，轻触重试噢</string>
 </resources>
