feat: 关于页面增加检查更新按钮

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="version_update_title">卧卷版本更新</string>
     <string name="update_now">立刻更新</string>
     <string name="update_next_time">下次再说</string>
+    <string name="check_update">检查更新</string>
 </resources>
