--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
 
     <string name="about_me">关于我</string>
     <string name="contact_me">联系我</string>
+    <string name="upload_log">上传日志</string>
+    <string name="empty_log_files">没有日志文件</string>
     <string name="please_enter_feedback_title">请输入标题（选填）</string>
     <string name="please_enter_feedback_content">请输入反馈意见（必填）</string>
     <string name="please_enter_feedback_email">请输入您的邮箱（选填）</string>
