feat: 工具页增加音频播放器入口

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,6 @@
     <string name="share">分享</string>
     <string name="copy_share_link">复制链接</string>
     <string name="already_copy_to_clipboard">已复制到剪贴板</string>
+
+    <string name="audio_player_entrance">来一首吗</string>
 </resources>
