--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="already_copy_to_clipboard">已复制到剪贴板</string>
 
     <string name="audio_player_entrance">来一首吗</string>
+    <string name="play_audio_error">播放音频失败</string>
 </resources>
