feat: 音频播放页-70%，播放列表基本样式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="list_loop">列表循环</string>
     <string name="shuffle_mode">随机播放</string>
     <string name="repeat_one">单曲循环</string>
+    <string name="current_play_list">当前播放列表（%d）</string>
 </resources>
