--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,6 @@
     <string name="shuffle_mode">随机播放</string>
     <string name="repeat_one">单曲循环</string>
     <string name="current_play_list">当前播放列表（%d）</string>
+
+    <string name="notification_channel_audio">音频播放</string>
 </resources>
