--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="current_play_list">当前播放列表（%d）</string>
 
     <string name="notification_channel_audio">音频播放</string>
+    <string name="notification_permission_for_audio_player">通知权限用于状态栏显示噢</string>
 </resources>
