--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,11 @@
     <string name="current_play_list">当前播放列表（%d）</string>
 
     <string name="notification_channel_audio">音频播放</string>
+    <string name="notification_channel_normal">普通消息</string>
     <string name="notification_channel_audio_description">此通道用于显示音频播放器</string>
+    <string name="notification_channel_normal_description">此通道用于显示各种普通消息</string>
     <string name="notification_permission_for_audio_player">如需显示通知请手动前往应用设置打开通知权限噢</string>
+
+    <string name="notification_title_has_update">卧卷APP有新版本啦</string>
+    <string name="notification_content_text_click_to_update">点击更新噢</string>
 </resources>
